--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
+
   "rewrites": [
+    { "source": "/api/:path*", "destination": "/api/:path*" },
+    { "source": "/_next/:path*", "destination": "/_next/:path*" },
+    { "source": "/static/:path*", "destination": "/static/:path*" },
 
-    { "source": "/contato", "destination": "/contato" },
-    { "source": "/termos", "destination": "/termos" },
-    { "source": "/sobrenos", "destination": "/sobrenos" },
-
-    { "source": "/(.*)", "destination": "/erro404" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
-
